tools/crates/vendor/toml_edit-0.19.15/tests/fixtures/invalid/float/leading-zero-neg.stderr
TOML parse error at line 1, column 22
  |
1 | leading-zero-neg = -03.14
  |                      ^
expected newline, `#`
